animated background for splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Gambling App</string>
+    <string name="loading_screen_progress">%s%%</string>
 </resources>
