The app roughly works now, successfully translated to compose

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,8 @@
 
     <string name="loading_screen_progress">%s%%</string>
 
-    <string name="roulette_last_result">Last result: %s$</string>
+    <string name="roulette_last_result">Last result:</string>
+    <string name="roulette_result_money">%s$</string>
 
 
 </resources>
